# ym_bounds

./: .gitignore  README.md  bounds.csv  bounds.json  bounds.tex  certificate.csv  certificate.json  explicit_su3_bounds_report.tex  input_constants.json  main.py  pyproject.toml
src/ym_bounds/: cli.py  clustering.py  collar.py  contraction.py  perimeter.py  rg.py  string_tension.py  su3.py  tube_cost.py
src/ym_research/: BoundDiscovererToolCLI.py  __init__.py  bounds.csv  bounds.json  ym_research.md
tests/: test_core.py
